fixed side prof alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,7 +315,7 @@ button:focus {
 .makeItStick {
     position: fixed;
     left: 0;
-    top: 24em;
+    top: 15em;
 }
 
 .nameHeader {
